# taskbar

./: .gitignore  LICENSE  README-en.md  README-zh-TW.md  README-zh.md  README.md  pyproject.toml
src/taskbar/: __init__.py  cli.py  exporter.py  manager.py  task.py
tests/: conftest.py  test_exporter.py  test_manager.py  test_task.py
