[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbar-cli"
version = "1.0.0"
description = "A powerful terminal-based task progress tracking tool with nested tasks, dependencies, and multi-format export"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SOLO Agent", email = "solo-agent@example.com"}
]
keywords = ["task", "progress", "tracker", "terminal", "cli", "tui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
taskbar = "taskbar.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/taskbar"
Documentation = "https://github.com/gitstq/taskbar#readme"
Repository = "https://github.com/gitstq/taskbar"
Issues = "https://github.com/gitstq/taskbar/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
